complete client product